Modified behavior of the post-search branch length optimizer to retain original network in case when no better set of branch lengths was found during the post-optimization step. Also cleaned up Java deprecated constructors for Int, Long and DOuble by switching to recommended Class.valueOf().