@@ -207,7 +207,7 @@ public class InferNetwork_ML_BootStrap extends CommandBaseFileOut{
                 {
                     try
                     {
-                        _maxExaminations = new Long(Integer.parseInt(mParam.PostSwitchValue));
+                        _maxExaminations = Long.valueOf(Integer.parseInt(mParam.PostSwitchValue));
                     }
                     catch(NumberFormatException e)
                     {
