@@ -184,7 +184,7 @@ public class InferNetwork_MP_Allopp extends CommandBaseFileOut{
                 {
                     try
                     {
-                        _maxExaminations = new Long(Integer.parseInt(mParam.PostSwitchValue));
+                        _maxExaminations = Long.valueOf(Integer.parseInt(mParam.PostSwitchValue));
                     }
                     catch(NumberFormatException e)
                     {
